--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -125,7 +125,7 @@
                            {% endif %} {% if request.user.is_superuser == True %}
                            <a href="{% url 'admin_dashboard' %}" class="btn btn-main btn-small" aria-label="Admin Dashboard">Admin Dashboard</a>
                            {% endif %}
-                           <a href="{% url 'logout' %}" class="btn btn-main btn-small" aria-label="Logout">
+                           <a href="{% url 'logout' %}?v={% now 'M-d-Y-H-i-s' %}" class="btn btn-main btn-small" aria-label="Logout">
                               <i class="fa fa-sign-out-alt"></i>
                            </a>
                            {% else %}
