--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -166,7 +166,7 @@
                         </a>
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                           <a class="dropdown-item" href="{% url 'logout' %}">
+                           <a class="dropdown-item" href="{% url 'logout' %}?v={% now 'M-d-Y-H-i-s' %}">
                               <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                               Logout
                            </a>
