--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -84,7 +84,7 @@
                         </li>
 
                         <li class="nav-item">
-                           <a class="nav-link" href="{% url 'logout' %}"> Logout </a>
+                           <a class="nav-link" href="{% url 'logout' %}?v={% now 'M-d-Y-H-i-s' %}"> Logout </a>
                         </li>
                      </ul>
                   </div>
