--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -106,7 +106,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'logout' %}">
+                                    <a class="nav-link" href="{% url 'logout' %}?v={% now 'M-d-Y-H-i-s' %}">
                                        Logout
                                     </a>
                                 </li>
