--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -28,7 +28,8 @@
 
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/combine.css' %}" />
 
-      {% comment %} <!-- bootstrap.min css -->
+      {% comment %}
+      <!-- bootstrap.min css -->
       <link rel="stylesheet" href="{% static 'edutim/vendors/bootstrap/bootstrap.css' %}" />
       <link
          rel="preload"
@@ -42,8 +43,7 @@
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/css/style.css' %}" />
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/css/responsive.css' %}" />
 
-      
-       {% endcomment %}
+      {% endcomment %}
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       {% comment %}
@@ -84,11 +84,33 @@
          gtag("config", "G-K1L4WGV6EM");
       </script>
 
+      <!-- Begin Inspectlet Asynchronous Code -->
+      <script type="text/javascript">
+         (function () {
+            window.__insp = window.__insp || [];
+            __insp.push(["wid", 1713537870]);
+            var ldinsp = function () {
+               if (typeof window.__inspld != "undefined") return;
+               window.__inspld = 1;
+               var insp = document.createElement("script");
+               insp.type = "text/javascript";
+               insp.async = true;
+               insp.id = "inspsync";
+               insp.src =
+                  ("https:" == document.location.protocol ? "https" : "http") +
+                  "://cdn.inspectlet.com/inspectlet.js?wid=1713537870&r=" +
+                  Math.floor(new Date().getTime() / 3600000);
+               var x = document.getElementsByTagName("script")[0];
+               x.parentNode.insertBefore(insp, x);
+            };
+            setTimeout(ldinsp, 0);
+         })();
+      </script>
+      <!-- End Inspectlet Asynchronous Code -->
    </head>
 
    <body id="top-header">
       <header>
-
          <div class="header-top">
             <div class="container">
                <div class="row align-items-center">
@@ -139,7 +161,7 @@
          </div>
 
          <!-- Main Menu Start -->
-   
+
          <div class="site-navigation main_menu">
             <nav class="navbar navbar-expand-lg">
                <div class="container justify-content-center">
@@ -160,7 +182,7 @@
                <!-- / .container -->
             </nav>
          </div>
-     
+
          <div class="site-navigation main_menu" id="mainmenu-area">
             <nav class="navbar navbar-expand-lg">
                <div class="container justify-content-center">
@@ -178,7 +200,6 @@
 
                   <!-- Collapse -->
                   <div class="collapse navbar-collapse justify-content-center" id="navbarMenu">
-                     
                      <ul class="navbar-nav">
                         <li class="nav-item">
                            <a class="nav-link" href="/" aria-label="Home"> Home </a>
@@ -211,7 +232,7 @@
                            <a href="/contact/" class="nav-link"> Contact </a>
                         </li>
                      </ul>
- 
+
                      <ul class="header-contact-right">
                         <li>
                            <a href="{% url 'cart_detail' %}" class="header-cart" alt="My Cart" aria-label="My Cart">
@@ -404,30 +425,24 @@
          </a>
       </div>
 
-   
       <link
          rel="preload"
          as="style"
          onload="this.onload=null;this.rel='stylesheet'"
          href="{% static 'edutim/vendors/fontawesome/css/all.min.css' %}"
       />
-      <link
-         rel="preload"
-         as="style"
-         onload="this.onload=null;this.rel='stylesheet'"
-         href="{% static 'edutim/vendors/bicon/css/bicon.min.css' %}"
-      />
+      <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/vendors/bicon/css/bicon.min.css' %}" />
 
       <!-- Main jQuery -->
       <script src="{% static 'edutim/vendors/jquery/jquery.js' %}"></script>
       <!-- Bootstrap 4.5 -->
       <script async src="{% static 'edutim/vendors/bootstrap/bootstrap.min.js' %}"></script>
-      <script defer  src="{% static 'edutim/vendors/jquery.validate.min.js' %}"></script>
-      <script defer  src="{% static 'edutim/vendors/jquery.form.min.js' %}"></script>
+      <script defer src="{% static 'edutim/vendors/jquery.validate.min.js' %}"></script>
+      <script defer src="{% static 'edutim/vendors/jquery.form.min.js' %}"></script>
       <script defer src="{% static 'edutim/vendors/sweetalert.min.js' %}"></script>
-      <script defer  src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
-      <script defer  src="{% static 'edutim/vendors/jquery.lazy.min.js' %}"></script>
-      <script defer  src="{% static 'edutim/js/script.js' %}"></script>
+      <script defer src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
+      <script defer src="{% static 'edutim/vendors/jquery.lazy.min.js' %}"></script>
+      <script defer src="{% static 'edutim/js/script.js' %}"></script>
 
       <script>
          (function ($) {
@@ -503,7 +518,7 @@
                      eventValue: product.pk,
                   };
 
-                 // ga("send", _opts);
+                  // ga("send", _opts);
                };
 
                var registerEvent = function () {
