admin user cache

--- a/app_admin/templates/students/list.html
+++ b/app_admin/templates/students/list.html
@@ -309,6 +309,7 @@
                "/api/users/?format=json",
                {
                   is_student: 1,
+                  _: $.now()
                },
                function (response) {
                   studentsList = response;
