--- a/app_students/templates/inbox/messages.html
+++ b/app_students/templates/inbox/messages.html
@@ -216,7 +216,7 @@
 
                     var cId = $("#fmChat input[name='conversation']").val();
 
-                    $.get("{% url 'api_messages' %}", {
+                    $.get("{% url 'api_v1:api_messages' %}", {
                         conversation: cId,
                         type: 'last10'
                     }, function (response) {
@@ -298,7 +298,7 @@
                         var template = Handlebars.compile(source);
 
                         var token = "{% csrf_token %}";
-                        var url = "{% url 'api_messages' %}";
+                        var url = "{% url 'api_v1:api_messages' %}";
 
                         var item = {
                             room_name: $.trim($(this).text()),
