--- a/app_students/templates/courses/list.html
+++ b/app_students/templates/courses/list.html
@@ -26,7 +26,7 @@
                     <section class="feature-3">
                         <div class="container">
                             <div class="row align-items-center mb-4">
-                                <div class="col-md-4">
+                                <div class="col-md-4 mb-2">
                                     <div class="topbar-search">
                                         <form method="get" id="fmSearch" action="{% url 'student_courses' %}">
                                             <input type="text" name="q" placeholder="Search courses" class="form-control"/>
@@ -36,7 +36,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 text-center text-md-left">
                                     <button class="btn btn-success mr-2" id="btnSearch">Search</button>
                                     <a href="{% url 'student_courses' %}" class="btn btn-secondary">Clear</a>
                                 </div>
