--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -276,14 +276,13 @@
       />
 
       <style>
-         @media (max-width: 991px)
-{
-   .navbar-toggler-icon {
-      line-height: 1.6em;
-      position: relative;
-      right: 0px;
-  }
-}
+         @media (max-width: 991px) {
+            .navbar-toggler-icon {
+               line-height: 1.6em;
+               position: relative;
+               right: 0px;
+            }
+         }
       </style>
       {% comment %} <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.11.3/datatables.min.css" /> {% endcomment %}
 
