--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -64,6 +64,15 @@
                </div>
 
                <div class="row">
+
+                  {% if request.user.is_authenticated %}
+            
+                  <input type="hidden" id="name" name="name" class="form-control" value="{{request.user.username}}" />
+
+                  <input type="hidden" name="email" id="email" class="form-control" value="{{request.user.email}}" />
+
+                  {% else %}
+                
                   <div class="col-lg-6">
                      <div class="form-group">
                         <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" />
@@ -75,6 +84,10 @@
                         <input type="text" name="email" id="email" class="form-control" placeholder="Email Address" />
                      </div>
                   </div>
+
+                  {% endif %}
+
+                
 
                   <div class="col-lg-12">
                      <div class="form-group">
