inpect to cart only

--- a/app_cart/templates/checkout.html
+++ b/app_cart/templates/checkout.html
@@ -7,6 +7,35 @@ Checkout | pdhsafety.com
 {% endblock %}
 {% block content %}
 
+{% block head %}
+
+<!-- Begin Inspectlet Asynchronous Code -->
+<script type="text/javascript">
+    (function () {
+        window.__insp = window.__insp || [];
+        __insp.push(["wid", 1713537870]);
+        var ldinsp = function () {
+            if (typeof window.__inspld != "undefined") return;
+            window.__inspld = 1;
+            var insp = document.createElement("script");
+            insp.type = "text/javascript";
+            insp.async = true;
+            insp.id = "inspsync";
+            insp.src =
+                ("https:" == document.location.protocol ? "https" : "http") +
+                "://cdn.inspectlet.com/inspectlet.js?wid=1713537870&r=" +
+                Math.floor(new Date().getTime() / 3600000);
+            var x = document.getElementsByTagName("script")[0];
+            x.parentNode.insertBefore(insp, x);
+        };
+        setTimeout(ldinsp, 0);
+    })();
+</script>
+<!-- End Inspectlet Asynchronous Code -->
+
+
+{% endblock %}
+
 <section class="page-header">
     <div class="container">
         <div class="row justify-content-center">
@@ -50,7 +79,19 @@ Checkout | pdhsafety.com
                     <div class="text-center">
                         or Pay Online
                     </div>
-                    <div id="paypal-button-container" class="mt-3"></div>
+
+                    <div id="paypalLoader">
+                        
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="sr-only">Loading...</span>
+                          </div>
+
+                        Loading payment method. Please wait..
+
+                    </div>
+                    <div id="paypal-button-container" class="mt-3">
+                       
+                    </div>
                 </div>
             </div>
         </div>
@@ -283,6 +324,7 @@ Checkout | pdhsafety.com
                     }
                 }).render('#paypal-button-container');
 
+                $("#paypalLoader").hide();
 
             };
 
